--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-redux": "^7.1.33",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -19,7 +22,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,14 +33,16 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
-    "@types/react": "^18.2.6",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.2",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
