--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
@@ -18,6 +19,8 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-eject": "^0.2.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
@@ -36,6 +39,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.2",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-elements": "^0.18.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
